2008-10-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtpL16pay.c: (gst_rtp_L16_pay_flush),
	(gst_rtp_L16_pay_getcaps):
	Only put an integral amount of samples in the RTP packet.
	Fixes #556641.

2008-10-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtpchannels.c: (gst_rtp_channels_get_by_index):
	* gst/rtp/gstrtpchannels.h:
	Add method to get possible channel positions.

2008-10-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/Makefile.am:
	Also commit updated makefile

2008-10-28  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/wavenc/gstwavenc.c: (gst_wavenc_chain):
	Don't allow width=32,depth=24 as input. WAV requires that the width
	is the next integer multiply of 8 from the depth.

2008-10-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtpL16depay.c: (gst_rtp_L16_depay_setcaps):
	* gst/rtp/gstrtpL16pay.c: (gst_rtp_L16_pay_setcaps),
	(gst_rtp_L16_pay_getcaps):
	* gst/rtp/gstrtpchannels.c: (check_channels),
	(gst_rtp_channels_get_by_pos), (gst_rtp_channels_get_by_order),
	(gst_rtp_channels_create_default):
	* gst/rtp/gstrtpchannels.h:
	Add mappings for multichannel support. Does not completely just work
	because the getcaps function does not yet return the allowed channel
	mappings. See #556641.

2008-10-28  Stefan Kost  <ensonic@users.sf.net>

	* gst/goom/Makefile.am:
	* gst/goom/README:
	* gst/goom/config_param.c:
	* gst/goom/convolve_fx.c:
	* gst/goom/drawmethods.c:
	* gst/goom/drawmethods.h:
	* gst/goom/filters.c:
	* gst/goom/filters_mmx.s:
	* gst/goom/flying_stars_fx.c:
	* gst/goom/goom.h:
	* gst/goom/goom_config.h:
	* gst/goom/goom_config_param.h:
	* gst/goom/goom_core.c:
	* gst/goom/goom_filters.h:
	* gst/goom/goom_fx.h:
	* gst/goom/goom_graphic.h:
	* gst/goom/goom_plugin_info.h:
	* gst/goom/goom_tools.c:
	* gst/goom/goom_tools.h:
	* gst/goom/goom_typedefs.h:
	* gst/goom/goom_visual_fx.h:
	* gst/goom/graphic.c:
	* gst/goom/ifs.c:
	* gst/goom/ifs.h:
	* gst/goom/lines.c:
	* gst/goom/lines.h: