@@ -1,3 +1,10 @@
+2008-10-30  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	* gst/rtp/gstrtpmpadepay.c: (gst_rtp_mpa_depay_setcaps):
+	* gst/rtp/gstrtpmpapay.c:
+	Narrow down the caps of the mpeg audio pay/depayloaders to only accept
+	mpeg version 1. Fixes #558427.
+
 2008-10-29  Wim Taymans  <wim.taymans@collabora.co.uk>
 
 	* gst/rtp/gstrtpL16pay.c: (gst_rtp_L16_pay_flush),
